Enviar solicitud de usuario y agregar (1.3.0)
